--- a/public/HomePage.html
+++ b/public/HomePage.html
@@ -5,17 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="Stylesheet.css">
+  <script src="Front.js"></script>
 </head>
 <body>
   <button id="ADD"> ADD </button>
   
   <br><br><br>
   <div>
-     <input placeholder="search by name" id="search-input">
-     <button id="search-btn">Search</button>
+     <input type="text" placeholder="search by name" id="search-input">
+
+     <button id="search-btn" onclick="window.location.href='http://localhost:8080/notes'">Search</button>
+
   </div>
 
-  <table id="table">
+  <table id="table" class="table">
     <thead>
         <th>Name</th>
         <th>Number</th>
@@ -24,7 +27,10 @@
         <th>Edit</th>
         <th>Delete</th>
     </thead>
-    <tbody></tbody>
+    <tbody>
+
+    </tbody>
 </table>
+
 </body>
 </html>
